[package]
name = "hello_near"
version = "1.0.0"
authors = ["Near Inc <hello@near.org>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ipfs-api = "0.17.0"
near-sdk = "4.0.0"
serde = "1.0.152"
tokio = {version = "1.24.2", features = ["full"]}
uint = { version = "0.9.3", default-features = false }
uuid = {version = "1.2.2", features = ["v4"]}

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
members = []
